More flat brain

--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
     const fileList = event.target.files;
     console.log(fileList);
   });
-</script>
+</script><br><br>
+
+  <input type="text" id="cel_bodies_input"></input><br>
+  <script>
+    const exTest = document.getElementById('cel_bodies_inout');
+    console.log(exTest);
+  </script>
+
 
 </body>
 
