--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   });
 </script><br><br>
 
-  <input type="text" id="cel_bodies_input"></input><br>
+  <input type="text" id="cel_bodies_input"><br>
   <script>
     const exTest = document.getElementById('cel_bodies_inout');
     console.log(exTest);
