bringing the hydraulic press

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   });
 </script><br><br>
 
-  <input type="text" id="cel_bodies_input"><br>
+  <label for="fname">enter celestial body:</label>
+  <input type="text" id="cel_bodies_input" name="testname"><br>
+      
   <script>
     const exTest = document.getElementById('cel_bodies_inout');
     console.log(exTest);
