--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
   });
 </script><br><br>
 
-  <label for="fname">enter celestial body:</label>
-  <input type="text" id="cel_bodies_input" name="testname"><br>
+  <input type="text" id="cel_bodies_input"><br>
       
   <script>
     const exTest = document.getElementById('cel_bodies_inout');
