--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <body>
     <p src="app/test.txt"></p>
     
-    <button type="button" onclick="alert('Hello world!')">Click Me!</button><br><br>
+    <button type="button" onclick="alert('this button has been clicked, yay')">Click this Button</button><br><br>
 
     <input type="file" id="file-selector" multiple>
 <script>
@@ -15,12 +15,12 @@
     console.log(fileList);
   });
 </script><br><br>
-
+  Input a celestial body:
   <input type="text" id="cel_bodies_input"><br>
       
   <script>
-    const exTest = document.getElementById('cel_bodies_inout');
-    console.log(exTest);
+    const exTest = document.getElementById('cel_bodies_input');
+    document.write(exTest);
   </script>
 
 
