--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
   <input type="text" id="cel_bodies_input"><br>
       
   <script>
+    function printbody(){
     const exTest = document.getElementById('cel_bodies_input');
-    document.write(exTest);
+    document.write(exTest);}
   </script>
-
+      <button type="button" onclick="onclick="printbody();">activate output</button><br>
+      
 
 </body>
 
