--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <script>
     function printbody(){
     const exTest = document.getElementById('cel_bodies_input');
-    document.write(exTest);}
+    console.log(exTest);}
   </script>
       <button type="button" onclick="onclick="printbody();">activate output</button><br>
       
